--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
      - checkout
      - setup_remote_docker:
         docker_layer_caching: false
-      run:
+    - run:
         name: Build Docker Image
         command: |
           docker build -t nodejsatanuapp1 -t atanu/nodejsatanuapp1:latest .
