--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,18 +14,18 @@ jobs:
     docker:
       - image: circleci/node.12
     steps: 
-     - checkout
-     - setup_remote_docker:
-        docker_layer_caching: false
-    - run:
-        name: Build Docker Image
-        command: |
-          docker build -t nodejsatanuapp1 -t atanu/nodejsatanuapp1:latest .
-          echo $DOCKER_PASSWORD | docker login -u atanubiswas --password-xzy
-          docker push atanubiswas/nodejsatanuapp1:latest
+      - checkout
+      - setup_remote_docker:
+          docker_layer_caching: false
+      - run:
+          name: Build Docker Image
+          command: |
+            docker build -t nodejsatanuapp1 -t atanu/nodejsatanuapp1:latest .
+            echo $DOCKER_PASSWORD | docker login -u atanubiswas --password-xzy
+            docker push atanubiswas/nodejsatanuapp1:latest
 
 workflows:
   build_test:
-    job:
+    jobs:
       - build_test
       - build_docker_image
