--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,10 +24,10 @@ jobs:
 #             echo $DOCKER_PASSWORD | docker login -u atanubiswas --password-xzy
 #             docker push atanubiswas/nodejsatanuapp1:latest
 
-# workflows:
-#   build_test:
-#     jobs:
-#       - build_test
-#       - build_docker_image
+workflows:
+  build_test:
+    jobs:
+      - build_test
+      # - build_docker_image
 
 ### test1
